feat: add watcher script to allow for hot-reloading in development
